[gd_scene load_steps=12 format=3 uid="uid://dfdx1ubnvimgn"]

[ext_resource type="Texture2D" uid="uid://b77j2lej3y6e1" path="res://assets/tiles_packed.png" id="1_o5fpr"]
[ext_resource type="Script" path="res://scenes/map/tank/tank.gd" id="1_s4eex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o56uv"]
radius = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_r5irg"]
atlas = ExtResource("1_o5fpr")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yleg2"]
atlas = ExtResource("1_o5fpr")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8jx8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5irg")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yleg2")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vwpy4"]
atlas = ExtResource("1_o5fpr")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksvvh"]
atlas = ExtResource("1_o5fpr")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io1ur"]
atlas = ExtResource("1_o5fpr")
region = Rect2(80, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1v3je"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwpy4")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksvvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io1ur")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gyoh2"]
radius = 180.0

[node name="Tank" type="CharacterBody2D"]
script = ExtResource("1_s4eex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o56uv")

[node name="BaseSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_8jx8u")
animation = &"red"

[node name="HeadSpirte" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.3, 4.3)
sprite_frames = SubResource("SpriteFrames_1v3je")
animation = &"red"
offset = Vector2(0, 1.25)

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_gyoh2")

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
